# ibus-table

./: .sparkleshare  SparkleShare.txt  configure.ac
engine/: .gitignore  Makefile.am  common_functions.py  ibus-table-updatedb.in  itdebug.py  properties.py  table.py  tabsqlitedb.py  tabupdatedb.py
icons/: Makefile.am
setup/: main.py
tools/: Unihan_Variants.txt
