# vim:set noet ts=4
#
# ibus-table - The Tables engine for IBus
#
# Copyright (c) 2008-2009 Yu Yuwei <acevery@gmail.com>
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
#

SUBDIRS = \
	$(NULL)

icons_DATA = \
	ibus-keyboard.svg \
	ibus-table.svg \
	full_width_letter_0.svg \
	full_width_letter_1.svg \
	full_width_punct_1.svg \
	full_width_punct_0.svg \
	pinyin_mode_1.svg \
	pinyin_mode_0.svg \
	one_char_1.svg \
	one_char_0.svg \
	chinese.svg \
	auto_commit_1.svg \
	auto_commit_0.svg \
	auto_select_1.svg \
	auto_select_0.svg \
	always_show_lookup_1.svg \
	always_show_lookup_0.svg \
	chinese_mode_0.svg \
	chinese_mode_1.svg \
	chinese_mode_2.svg \
	chinese_mode_3.svg \
	chinese_mode_4.svg \
	$(NULL)

iconsdir = $(pkgdatadir)/icons

EXTRA_DIST = \
	$(icons_DATA) \
	$(NULL)

MAINTAINERCLEANFILES = \
	Makefile.in \
	$(NULL)

